// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> renders the content properly 1`] = `
<div>
  <a
    aria-label="View John Doe profile on GitHub"
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-vnlgj6-MuiTypography-root-MuiLink-root"
    href="https://github.com/JohnDoe"
    rel="noopener noreferrer"
  >
    VISIT PROFILE
  </a>
</div>
`;

exports[`<Link /> renders the content properly when there is an icon associated 1`] = `
<div>
  <a
    aria-label="View John Doe profile on GitHub"
    class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-vnlgj6-MuiTypography-root-MuiLink-root"
    href="https://github.com/JohnDoe"
    rel="noopener noreferrer"
  >
    <span
      aria-hidden="true"
      class="material-icons notranslate MuiIcon-root MuiIcon-fontSizeMedium css-l9i5fy-MuiIcon-root"
    >
      visibility
    </span>
    VISIT PROFILE
  </a>
</div>
`;
